Inicio de la Aplicacion

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,22 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/mdb.min.css">
+  <link rel="stylesheet" href="./assets/css/compiled.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Cargando...</app-root>
+
+  <script src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/js/jquery.maskedinput.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/mdb.min.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
